--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	
 </head>
 <body>
+	
+	<div class="bg">
 	<HEADER>
 		<!-- left header -->
 		<div class="container">
@@ -25,18 +27,34 @@
 			      </a>
 			         		<!-- center header -->
 		              <ul class="menu cf right">
-                         <li><a href="">NEWS</a></li>
+                         <li><a href="">NEWS</a>		
+                         </li>
                          <li><a href="">FOOTBALL</a>
                              <ul class="submenu">
-                                <li><a href="">VIDEO GALLERY</a></li>
+                                <li><a href="index2.html">VIDEO GALLERY</a></li>
                                  <li><a href="">PHOTO GALLERY</a></li>
                                  <li><a href="">SQUAD</a></li>
                                  <li><a href="">ACADEMY</a></li>
                             </ul>			
                          </li>
-                         <li><a href="">BASKETBALL</a></li>
-                         <li><a href="">MEMBERS</a></li>
-                         <li><a href="">FAN ZONE</a></li>
+                         <li><a href="">BASKETBALL</a>
+                         <ul class="submenu">
+                                <li><a href="">VIDEO GALLERY</a></li>
+                                 <li><a href="">PHOTO GALLERY</a></li>
+                                 <li><a href="">SQUAD</a></li>
+                                 <li><a href="">ACADEMY</a></li>
+                            </ul>			
+                        </li>
+                         <li><a href="">MEMBERS</a>
+                         <ul class="submenu">
+                                <li><a href="">MEMBERS SERVICE</a></li>
+                                 <li><a href="">SEASON TICKET HOLDER</a></li>
+                                 <li><a href="">ARRANGEMENTS</a></li>
+                                 <li><a href="">REGULATIONS</a></li>
+                            </ul>			
+                        </li>
+                         <li><a href="index3.html">CONTACT</a>
+                        </li>
                        </ul>
                         <!-- right header -->
                         <a href="">
@@ -50,10 +68,22 @@
                         </a>
                          <a href="">
                      <i class="fas fa-search"></i>
-                        </a>
+                        </a>                        
              </div>
         </div>
 	</HEADER>
+	<section class="container">
+		<!-- <div class="container">
+			<audio controls="autoplay">
+		<source src="audio/audio.mp3" type="audio/mpeg">
+	     </audio> -->
+   	
+		
+	</section>
+	
+		
+		
+	
 
 
 
