--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                                  <li><a href="">ACADEMY</a></li>
                             </ul>			
                          </li>
-                         <li><a href="">BASKETBALL</a>
+                         <li><a href="">THE CLUB</a>
                          <ul class="submenu">
-                                <li><a href="">VIDEO GALLERY</a></li>
-                                 <li><a href="">PHOTO GALLERY</a></li>
-                                 <li><a href="">SQUAD</a></li>
-                                 <li><a href="">ACADEMY</a></li>
+                                <li><a href="">HONOURS</a></li>
+                                 <li><a href="">HISTORY</a></li>
+                                 <li><a href="">FOUNDATION</a></li>
+                                 <li><a href="">EVENTS</a></li>
                             </ul>			
                         </li>
                          <li><a href="">MEMBERS</a>
@@ -72,15 +72,11 @@
              </div>
         </div>
 	</HEADER>
-	<section class="container">
-		<!-- <div class="container">
-			<audio controls="autoplay">
-		<source src="audio/audio.mp3" type="audio/mpeg">
-	     </audio> -->
-   	
-		
-	</section>
 	
+		
+		 <audio autoplay="autoplay" hidden="hidden"> <source src="audio/sound.mp3" type="audio/mpeg""> </audio>
+
+    
 		
 		
 	
